kubernetes/apps/grafana/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: grafana
      tier: monitoring
  template:
    metadata:
      labels:
        app: grafana
        tier: monitoring
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          name: web

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

        volumeMounts:
        - name: grafana-volume
          mountPath: /var/lib/grafana

      volumes:
      - name: grafana-volume
        persistentVolumeClaim:
          claimName: pvc-grafana
