kubernetes/apps/grafana/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: apps
spec:
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
